# openstack-middleware-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  openapi.py
app/database/: __init__.py  engine.py  models.py  session.py
app/errors/: __init__.py  handlers.py
app/middleware/: auth.py
app/repositories/: __init__.py  inventory.py
app/routes/: __init__.py  health.py  openstack.py
app/schemas/: __init__.py  common.py  flavor.py  health.py  image.py  inventory_source.py  network.py  project.py  server.py
app/services/: __init__.py  inventory_query.py  openstack_client.py
app/utils/: __init__.py  logging.py
docker/: gunicorn.conf.py
instance/: .gitkeep
tests/: conftest.py  helpers.py  test_auth.py  test_docker.py  test_health.py  test_inventory_api.py  test_openapi.py  test_openstack.py  test_openstack_auth_config.py  test_server_tags.py
